# watchlist-watchdog

./: .gitignore  README.md  episode-owl.bat  pyproject.toml  requirements-dev.txt  requirements.txt
src/episode_owl/: __init__.py  __main__.py  api.py  cli.py  config.py  notifications.py  notifier.py  search.py  storage.py  tracker.py  utils.py  watched.py
tests/: __init__.py  test_api.py  test_config.py  test_integration.py  test_notifications.py  test_notifier.py  test_search.py  test_storage.py  test_tracker.py  test_utils.py  test_watched.py
